replace literals with constants
