# server/internal/docs/swagger.json
@@ -83,7 +83,7 @@
                 "operationId": "get_task_by_id",
                 "parameters": [
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "task id",
                         "name": "task_id",
                         "in": "path",
@@ -121,6 +121,15 @@
                         "name": "task_id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "task object",
+                        "name": "task",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.TaskPutDTO"
+                        }
                     }
                 ],
                 "responses": {
@@ -171,11 +180,20 @@
                 "complexity": {
                     "type": "string"
                 },
+                "created_at": {
+                    "type": "string"
+                },
+                "deadline": {
+                    "type": "string"
+                },
                 "description": {
                     "type": "string"
                 },
-                "hardDeadline": {
-                    "type": "string"
+                "estimated": {
+                    "type": "integer"
+                },
+                "icon": {
+                    "type": "integer"
                 },
                 "id": {
                     "type": "integer"
@@ -183,11 +201,45 @@
                 "priority": {
                     "type": "string"
                 },
-                "softDeadline": {
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.TaskPutDTO": {
+            "type": "object",
+            "properties": {
+                "complexity": {
+                    "type": "string",
+                    "enum": [
+                        "very_low",
+                        "low",
+                        "mid",
+                        "high",
+                        "very_high"
+                    ]
+                },
+                "deadline": {
                     "type": "string"
                 },
-                "status": {
+                "description": {
                     "type": "string"
+                },
+                "estimated": {
+                    "type": "integer"
+                },
+                "icon": {
+                    "type": "integer"
+                },
+                "priority": {
+                    "type": "string",
+                    "enum": [
+                        "very_low",
+                        "low",
+                        "mid",
+                        "high",
+                        "very_high"
+                    ]
                 },
                 "title": {
                     "type": "string"
